removed the sidenav dots so my own fixed nav will look better. Need to get more content/spacing/structure down, then I will focus on styling

--- a/assets/style.css
+++ b/assets/style.css
@@ -12,8 +12,13 @@
   shape-outside: circle();
   border-radius: 50%;
 
-  width: 190px;
-  height: 190px;
+  width: 10rem;
+  height: 10rem;
+}
+#nav-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #nav {
@@ -30,6 +35,7 @@
   flex-direction: column;
   width: 17rem;
   height: 100vh;
+  justify-content: center;
   background: -webkit-gradient(
     linear,
     top left,
